<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context="com.example.android.scorekeeper.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:hint="@string/player_1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/player_one_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/null_value"
                android:textColor="#000000"
                android:textSize="50sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addOnePlayerOne"
                android:soundEffectsEnabled="true"
                android:text="@string/_1_train_car" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addTwoPlayerOne"
                android:text="@string/_2_train_cars" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addFourPlayerOne"
                android:text="@string/_3_train_cars" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addSevenPlayerOne"
                android:text="@string/_4_train_cars" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addTenPlayerOne"
                android:text="@string/_5_train_cars" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addFifteenPlayerOne"
                android:text="@string/_6_train_cars" />


        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:hint="@string/player_2"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/player_two_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/null_value"
                android:textColor="#000000"
                android:textSize="50sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addOnePlayerTwo"
                android:text="@string/_1_train_car" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addTwoPlayerTwo"
                android:text="@string/_2_train_cars" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addFourPlayerTwo"
                android:text="@string/_3_train_cars" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addSevenPlayerTwo"
                android:text="@string/_4_train_cars" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addTenPlayerTwo"
                android:text="@string/_5_train_cars" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addFifteenPlayerTwo"
                android:text="@string/_6_train_cars" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:onClick="resetScore"
        android:text="@string/reset" />

</RelativeLayout>

